--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "sass-loader": "^12.2.0",
     "web-vitals": "^1.0.1"
   },
+  "devDependencies": {
+    "react-test-renderer": "^17.0.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
