--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,9 +32,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - uses: borales/actions-yarn@v2.3.0
-        with:
-          cmd: install # will run `yarn install` command
-      - uses: borales/actions-yarn@v2.3.0
-        with:
-          cmd: test # will run `yarn test` command
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+      - name: Test react app
+        run: yarn test
+
