--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 15.x, 16.x, 17.x]
+        node-version: [12.x, 14.x, 16.x, 17.x]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -36,4 +36,3 @@ jobs:
         run: yarn install --frozen-lockfile
       - name: Test react app
         run: yarn test
-
