--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2",
     "bootstrap": "5.1.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
@@ -14,11 +19,14 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "sass-loader": "^12.2.0",
+    "typescript": "^4.4.4",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.15.8",
-    "identity-obj-proxy": "^3.0.0"
+    "@babel/preset-typescript": "^7.16.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-fetch-mock": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
